docs/7.52/md/abenabap_object_services_transact.md
---
title: "Continue"
description: |
  Transaction Service Overview(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_terms.htm) Components of the Transaction Service(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_comps.htm) Transaction Mode(https://help.sap.com/doc/abapdoc
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_object_services_transact.htm"
abapFile: "abenabap_object_services_transact.htm"
keywords: ["update", "do", "if", "try", "data", "abenabap", "object", "services", "transact"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_external_data.htm) →  [ABAP Database Accesses](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sql.htm) →  [Object Services](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_object_services.htm) → 

transaction service

The transaction service implicitly or explicitly handles [updates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenupdate_glosry.htm "Glossary Entry") of persistent objects created in the program or whose persistent attributes were changed.

-   [Transaction Service Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_terms.htm)

-   [Components of the Transaction Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_comps.htm)

-   [Transaction Mode](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_mode.htm)

-   [Nesting and Chaining Transactions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_nesting.htm)

-   [Transaction Service and Updates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_luw.htm)

-   [Check Agents](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_check.htm)

Continue
[Transaction Service Overview](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_terms.htm)
[Components of the Transaction Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_comps.htm)
[Transaction Mode](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_mode.htm)
[Nesting and Chaining Transactions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_nesting.htm)
[Transaction Service and Updates](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_luw.htm)
[Checking Agents](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_check.htm)
![Example](exa.gif "Example") [Transaction Service](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenos_transaction_abexa.htm)