docs/7.57/md/abenabap_object_services_transact.md
---
title: "OS - Transaction Service"
description: |
  The transaction service implicitly or explicitly handles updates(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenupdate_glosry.htm 'Glossary Entry') of persistent objects created in the program or whose persistent attributes were changed. -   Transaction Service Overview(https://h
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_object_services_transact.htm"
abapFile: "abenabap_object_services_transact.htm"
keywords: ["update", "do", "if", "try", "data", "abenabap", "object", "services", "transact"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_access.htm) →  [Object Services (OS)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_object_services.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: OS - Transaction Service, ABENABAP_OBJECT_SERVICES_TRANSACT, 757%0D%0A%0D%0AError:%0D
%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

OS - Transaction Service

The transaction service implicitly or explicitly handles [updates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenupdate_glosry.htm "Glossary Entry") of persistent objects created in the program or whose persistent attributes were changed.

-   [Transaction Service Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_terms.htm)
-   [Components of the Transaction Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_comps.htm)
-   [Transaction Mode](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_mode.htm)
-   [Nesting and Chaining Transactions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_nesting.htm)
-   [Transaction Service and Updates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_luw.htm)
-   [Check Agents](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_check.htm)

Continue
[OS - Transaction Service, Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_terms.htm)
[OS - Components of the Transaction Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_comps.htm)
[OS - Transaction Mode](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_mode.htm)
[OS - Nesting and Chaining Transactions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_nesting.htm)
[OS - Transaction Service and Updates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_luw.htm)
[OS - Check Agents](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_check.htm)
![Example](exa.gif "Example") [OS - Transaction Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_abexa.htm)